# pedagio-automatico

./: CMakeLists.txt  README.md  main.c
lib/hcSR04/: hcSR04.h
lib/matriz/: matriz.c  matriz.h  matriz.pio
lib/sg90/: sg90.c  sg90.h
